<resources>
    <string name="app_name">TreinaMAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Treina MAR</string>
    <string name="nav_header_subtitle">contato@treinamar.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Vídeos</string>
    <string name="menu_qrcode">QR Code</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_about">Sobre</string>


</resources>