<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.lymtec.treinamar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.lymtec.treinamar.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.lymtec.treinamar.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_qrcode"
        android:name="br.com.lymtec.treinamar.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_qrcode"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_help"
        android:name="br.com.lymtec.treinamar.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_slideshow" />

</navigation>